初步搭建网站

--- a/my_note.html
+++ b/my_note.html
@@ -79,37 +79,28 @@
 								</section>
 
 							<!-- Menu -->
+								<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2>菜单</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">我的主页</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+										<span class="opener"><a href="my_note.html">我的笔记</a></span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">C++嵌入式开发笔记</a></li>
+												<li><a href="#">C++PrimerPlus编程笔记</a></li>
+												<li><a href="#">C++面试题笔记</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+											<span class="opener"><a href="my_project.html">我的项目</a></span>
+												<ul>
+													<li><a href="#">学舟自习室</a></li>
+													<li><a href="#">生灵诸天：篇章Ⅰ人体探幽</a></li>
+												</ul>
+											</li>
 									</ul>
 								</nav>
 
