--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="./images/icon/web_icon.ico" type="image/x-icon">
+
 	</head>
 	<body class="is-preload">
 
@@ -37,9 +39,9 @@
 									<div class="content">
 										<header>
 											<h1>我的博客</h1>
-											<p>一个记录灵感和笔记的地方</p>
+											<p>记录我的开发学习经历</p>
 										</header>
-										<p>我的博客中包含有我的编程开发笔记和一些灵感内容。</p>
+										<p>我的笔记主要和C++开发有关，后续会添加各种有趣的开源项目或收藏以及我个人搭建的项目。</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">了解更多</a></li>
 										</ul>
@@ -81,8 +83,7 @@
 										<li>
 											<span class="opener"><a href="my_project.html">我的项目</a></span>
 												<ul>
-													<li><a href="#">学舟自习室</a></li>
-													<li><a href="#">生灵诸天：篇章Ⅰ人体探幽</a></li>
+													<li><a href="#">暂无项目</a></li>
 												</ul>
 											</li>
 									</ul>
