更新网站内容

--- a/my_note.html
+++ b/my_note.html
@@ -78,6 +78,7 @@
 											<li><a href="/my_note/C++嵌入式开发体系笔记.html">C++嵌入式开发笔记</a></li>  
 											<li><a href="/my_note/C++PrimerPlus编程笔记.html">C++PrimerPlus编程笔记</a></li>  
 											<li><a href="/my_note/C++开发体系面试题笔记.html">C++面试题笔记</a></li>
+											<li><a href="/my_note/C++Qt开发笔记.html">C++Qt开发笔记</a></li>
 										</ul>
 									</li>
 									<li>
@@ -97,7 +98,7 @@
 								</header>
 								<p>欢迎交流和学习！</p>
 								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">3949922641@qq.com</a></li>
+									<li class="icon solid fa-envelope"><a href="#">2845547447@qq.com</a></li>
 									<!--
 									<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 									Nashville, TN 00000-0000</li>
