--- a/my_project.html
+++ b/my_project.html
@@ -74,7 +74,7 @@
 									<li>
 										<span class="opener"><a href="my_project.html">我的项目</a></span>
 											<ul>
-												<li><a href="#">暂无项目</a></li>
+												<li><a href="https://github.com/DaneJoe001/magic_box_of_vocabulary.git">单词魔盒项目</a></li>
 											</ul>
 										</li>
 								</ul>
